@@ -489,6 +489,14 @@ AC_ARG_ENABLE(system, [  --disable-system        disable system (shell) support]
 	       esac],
 	       [AC_DEFINE(WITH_SYSTEM) AC_MSG_RESULT(yes)])
 
+AC_MSG_CHECKING([whether to include shell invocation support])
+AC_ARG_ENABLE(system, [  --disable-shell         disable shell invocation support],
+	      [case "$enableval" in
+	       no) AC_MSG_RESULT(no);;
+	       *) AC_DEFINE(WITH_SHELL) AC_MSG_RESULT(yes);;
+	       esac],
+	       [AC_DEFINE(WITH_SHELL) AC_MSG_RESULT(yes)])
+
 AC_MSG_CHECKING(whether to include pty address support)
 AC_ARG_ENABLE(pty, [  --disable-pty           disable pty support],
 	      [case "$enableval" in
